@@ -733,17 +733,25 @@ argument_list|()
 argument_list|,
 name|type
 argument_list|,
-operator|-
-literal|1
-argument_list|,
-name|Collections
+name|fi
 operator|.
-name|emptyMap
+name|getDocValuesGen
 argument_list|()
 argument_list|,
-literal|0
+name|fi
+operator|.
+name|attributes
+argument_list|()
 argument_list|,
-literal|0
+name|fi
+operator|.
+name|getDimensionCount
+argument_list|()
+argument_list|,
+name|fi
+operator|.
+name|getDimensionNumBytes
+argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
