@@ -38,6 +38,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashMap
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|LinkedHashMap
 import|;
 end_import
@@ -75,6 +84,19 @@ operator|.
 name|util
 operator|.
 name|Collections
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|DimensionalIntField
 import|;
 end_import
 begin_import
@@ -150,9 +172,89 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|document
+operator|.
+name|NumericDocValuesField
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|StoredField
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|StringField
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|Field
+operator|.
+name|Store
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|index
 operator|.
 name|DocValues
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|DocValuesType
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|FieldInfo
 import|;
 end_import
 begin_import
@@ -2500,6 +2602,369 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+name|ir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testFieldInfos
+specifier|public
+name|void
+name|testFieldInfos
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|iw
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+literal|null
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|BytesRef
+name|idBytes
+init|=
+operator|new
+name|BytesRef
+argument_list|(
+literal|"id"
+argument_list|)
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|StringField
+argument_list|(
+literal|"id"
+argument_list|,
+name|idBytes
+argument_list|,
+name|Store
+operator|.
+name|YES
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|LegacyIntField
+argument_list|(
+literal|"int"
+argument_list|,
+literal|5
+argument_list|,
+name|Store
+operator|.
+name|YES
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|NumericDocValuesField
+argument_list|(
+literal|"dv"
+argument_list|,
+literal|5
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|DimensionalIntField
+argument_list|(
+literal|"dint"
+argument_list|,
+literal|5
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|StoredField
+argument_list|(
+literal|"stored"
+argument_list|,
+literal|5
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// not indexed
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|forceMerge
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Type
+argument_list|>
+name|uninvertingMap
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|uninvertingMap
+operator|.
+name|put
+argument_list|(
+literal|"int"
+argument_list|,
+name|Type
+operator|.
+name|INTEGER
+argument_list|)
+expr_stmt|;
+name|uninvertingMap
+operator|.
+name|put
+argument_list|(
+literal|"dv"
+argument_list|,
+name|Type
+operator|.
+name|INTEGER
+argument_list|)
+expr_stmt|;
+name|DirectoryReader
+name|ir
+init|=
+name|UninvertingReader
+operator|.
+name|wrap
+argument_list|(
+name|DirectoryReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+argument_list|,
+name|uninvertingMap
+argument_list|)
+decl_stmt|;
+name|LeafReader
+name|leafReader
+init|=
+name|ir
+operator|.
+name|leaves
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|reader
+argument_list|()
+decl_stmt|;
+name|FieldInfo
+name|intFInfo
+init|=
+name|leafReader
+operator|.
+name|getFieldInfos
+argument_list|()
+operator|.
+name|fieldInfo
+argument_list|(
+literal|"int"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|DocValuesType
+operator|.
+name|NUMERIC
+argument_list|,
+name|intFInfo
+operator|.
+name|getDocValuesType
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|intFInfo
+operator|.
+name|getDimensionCount
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|intFInfo
+operator|.
+name|getDimensionNumBytes
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|FieldInfo
+name|dintFInfo
+init|=
+name|leafReader
+operator|.
+name|getFieldInfos
+argument_list|()
+operator|.
+name|fieldInfo
+argument_list|(
+literal|"dint"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|dintFInfo
+operator|.
+name|getDimensionCount
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|4
+argument_list|,
+name|dintFInfo
+operator|.
+name|getDimensionNumBytes
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|FieldInfo
+name|dvFInfo
+init|=
+name|leafReader
+operator|.
+name|getFieldInfos
+argument_list|()
+operator|.
+name|fieldInfo
+argument_list|(
+literal|"dv"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|DocValuesType
+operator|.
+name|NUMERIC
+argument_list|,
+name|dvFInfo
+operator|.
+name|getDocValuesType
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"0"
+argument_list|,
+name|dvFInfo
+operator|.
+name|getAttribute
+argument_list|(
+literal|"PerFieldDocValuesFormat.suffix"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|FieldInfo
+name|storedFInfo
+init|=
+name|leafReader
+operator|.
+name|getFieldInfos
+argument_list|()
+operator|.
+name|fieldInfo
+argument_list|(
+literal|"stored"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|DocValuesType
+operator|.
+name|NONE
+argument_list|,
+name|storedFInfo
+operator|.
+name|getDocValuesType
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|TestUtil
+operator|.
+name|checkReader
+argument_list|(
+name|ir
+argument_list|)
+expr_stmt|;
 name|ir
 operator|.
 name|close
